# codee-demos

./: .gitmodules  README.md
C/ATMUX/: Makefile
C/CANNY/code/: CMakeLists.txt  Makefile
C/COULOMB/: coulomb.c
C/HACCmk/: Makefile  RunAll  main.c
C/HACCmk/01th/: RunMe_01th.sh
C/HACCmk/02th/: RunMe_02th.sh
C/HACCmk/04th/: RunMe_04th.sh
C/HACCmk/08th/: RunMe_08th.sh
C/HACCmk/16th/: RunMe_16th.sh
C/HACCmk/32th/: RunMe_32th.sh
C/HACCmk/64th/: RunMe_64th.sh
C/HEAT/: heat.c
C/LULESHmk/: Makefile
C/LULESHmk/src/: luleshmk.c
C/MATMUL_PWD006/: MATMUL_PWD006.sh  README.txt  launch.sh  main_pwd006.c
C/NPB_CG/CG/: cg.c  globals.h
C/NPB_CG/common/: c_print_results.c  c_timers.c  randdp.c  randdp.h  timers.h  wtime.c  wtime_sgi64.c
C/NPB_CG/config/: make.def  make.def.template
C/NPB_CG/sys/: Makefile  README  make.common  print_instructions
C/ZPIC/: README.txt  gnu_ZPIC.sh  launch.sh  nvidia_ZPIC.sh
C/ZPIC/em2d-0-serial/: Makefile  current.c  emf.c  main.c  particles.c  simulation.c  zdf.c
C/ZPIC/em2d-1-outlining/: main.c  particles.c  simulation.h  zdf.c  zdf.h
C/ZPIC/em2d-2-inlining/: particles.c
C/ZPIC/em2d-3-aos/: particles.c
C/ZPIC/em2d-4-loopfission/: Makefile  emf.h  one-malloc.c  one-malloc.h  particles.c  particles.h
Fortran/HYCOM/: README.md
Fortran/NUCCOR/: Makefile  README.md  contract_mtc.F90  contract_simple_mtc.F90  mtc.F90  mtc_main.F90  mtc_openmp.F90  mtc_patch.f90  transpose_1_4_3_2_real64_mtc.F90
Fortran/PI/v0.2/: CMakeLists.txt  README.md  pi_main.f90
Fortran/PI/v0.2/modules/: pi_module.f90
(+28 files in other folders)
